@@ -1,3 +1,6 @@
+Jul 24, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
+- new feature: quick filter
+
 Jul 18, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
 - do not set fs_game if mod is a 'main mod'
 
